--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,7 +20,11 @@ body {
     min-height: 100vh;
 }
 
-p.text-muted{  color:#fff; }
+div.card-body text-center p.text-muted {
+
+    color:#fff;
+  
+}
 
 /* Hero Section */
 .hero-section {
